<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/search_messages"
        android:icon="@drawable/ic_search"
        android:title="@string/menu_chat_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        />

    <item
        android:id="@+id/toggle_encryption"
        android:icon="@drawable/ic_lock_locked"
        android:title="@string/menu_chat_toggle_encryption"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/delete_messages"
        android:icon="@drawable/ic_delete"
        android:title="@string/menu_chat_delete_messages"
        android:visible="false"
        app:showAsAction="always|collapseActionView" />
    <item
        android:id="@+id/delete_all_messages"
        android:title="@string/menu_chat_delete_all_messages_device"
        app:showAsAction="collapseActionView" />
</menu>